# reseaerch-helper

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_agent/: __init__.py  __main__.py  agent.py  autonomy.py  background.py  cli.py  compaction.py  config.py  demo.py  factory.py  hooks.py  llm.py  memory_store.py  models.py  permissions.py  plugins.py  prompting.py  protocols.py  recovery.py  scheduler.py  skills.py  subagents.py  task_runtime.py  team.py  todos.py  tools.py  web.py  worktrees.py
src/research_agent/resources/skills/: source-selection.md
tests/: test_agent_loop.py  test_agent_platform.py  test_agent_runtime.py  test_autonomous.py  test_background.py  test_cli_live.py  test_cli_markdown_output.py  test_cli_platform.py  test_cli_runtime.py  test_cli_workspace.py  test_compaction.py  test_config.py  test_env_loading.py  test_hooks.py  test_live_research.py  test_llm.py  test_memory.py  test_permissions.py  test_plugins.py  test_prompting.py  test_protocols.py  test_public_api.py  test_recovery.py  test_scheduler.py  test_skills.py  test_task_runtime.py  test_team.py  test_todos.py  test_web.py  test_worktrees.py
